# netbox-aci-plugin

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements_dev.txt  ruff.toml  sitemap.xml
.ci/: configuration.testing.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml  housekeeping.yaml
.github/workflows/: ci.yaml  docs.yml  mkdocs.yaml  publish-pypi.yaml  publish.yaml
changelog/: index.html
contributing/: index.html
development/code_of_conduct/: index.html
development/contributing/: index.html
development/releasing/: index.html
docs/: graphql.md  security.md
docs/development/: code_of_conduct.md  releasing.md
docs/features/: access_policies.md  fabrics.md  tenants.md
docs/features/tenants/: application-profiles.md  contract-filters.md  contracts.md  endpoint-groups.md  endpoint-security-groups.md  index.md  l3outs.md  networking.md
features/tenants/: index.html
netbox_aci_plugin/: __init__.py  choices.py  constants.py  navigation.py  object_actions.py  search.py  urls.py  validators.py
netbox_aci_plugin/api/: serializers.py  urls.py  views.py
netbox_aci_plugin/api/serializers/: __init__.py  tenant_app_profiles.py  tenant_contract_filters.py  tenant_contracts.py  tenant_networks.py  tenants.py
netbox_aci_plugin/filtersets/: __init__.py  mixins.py  tenant_app_profiles.py  tenant_contract_filters.py  tenant_contracts.py  tenant_networks.py  tenants.py
netbox_aci_plugin/filtersets/access_policies/: domains.py
netbox_aci_plugin/filtersets/fabric/: fabrics.py  nodes.py  pods.py
netbox_aci_plugin/filtersets/tenant/: app_profiles.py  bridge_domains.py  contract_filters.py  contracts.py  endpoint_groups.py  endpoint_security_groups.py  l3outs.py  networks.py  tenants.py  vrfs.py
netbox_aci_plugin/forms/: __init__.py  tenant_app_profiles.py  tenant_contract_filters.py  tenant_contracts.py  tenant_networks.py  tenants.py
netbox_aci_plugin/forms/access_policies/: domains.py
netbox_aci_plugin/forms/fabric/: fabrics.py  nodes.py  pods.py
netbox_aci_plugin/forms/tenant/: app_profiles.py  bridge_domains.py  contract_filters.py  contracts.py  endpoint_groups.py  endpoint_security_groups.py  l3outs.py  networks.py  tenants.py  vrfs.py
netbox_aci_plugin/forms/widgets/: misc.py
netbox_aci_plugin/graphql/: __init__.py  enums.py  filter_lookups.py  filters.py  schema.py  types.py
netbox_aci_plugin/graphql/filters/: __init__.py  mixins.py
netbox_aci_plugin/migrations/: 0001_initial.py  0002_tenant_networks.py  0003_tenant_app_profiles.py  0004_tenant_contract_filters.py  0005_tenant_contracts.py  0006_base_model.py  0007_tenant_useg_endpoint_group.py  0008_aciendpointsecuritygroup.py  0009_alter_aciendpointgroup_options.py  0010_alter_aci_model_validators.py  0011_fabric.py  0012_fabric_pod.py  0013_fabric_node.py  0014_owner.py  0015_remove_acifabric_unique_fabric_id.py  0016_access_policy_routed_domain.py  0017_tenant_l3outs.py  0018_bridge_domain_l3out_binding.py  0019_default_related_name.py
netbox_aci_plugin/models/: __init__.py  base.py  mixins.py  tenant_app_profiles.py  tenant_contract_filters.py  tenant_contracts.py  tenant_networks.py  tenants.py
netbox_aci_plugin/models/access_policies/: domains.py
netbox_aci_plugin/models/fabric/: fabrics.py  nodes.py  pods.py
netbox_aci_plugin/models/tenant/: app_profiles.py  bridge_domains.py  contract_filters.py  contracts.py  endpoint_groups.py  endpoint_security_groups.py  l3outs.py  networks.py  tenants.py  vrfs.py
netbox_aci_plugin/tables/: tenant_app_profiles.py  tenant_contract_filters.py  tenant_contracts.py  tenant_networks.py  tenants.py
netbox_aci_plugin/tables/access_policies/: domains.py
netbox_aci_plugin/tables/fabric/: fabrics.py  nodes.py  pods.py
netbox_aci_plugin/tables/tenant/: app_profiles.py  bridge_domains.py  contract_filters.py  contracts.py  endpoint_groups.py  endpoint_security_groups.py  l3outs.py  networks.py  tenants.py  vrfs.py
netbox_aci_plugin/templates/netbox_aci_plugin/: aciappprofile.html  aciappprofile_endpointgroups.html  acibridgedomain.html  acibridgedomain_endpointgroups.html  acibridgedomain_subnets.html  acibridgedomainl3outbinding.html  acibridgedomainsubnet.html  acicontract.html  acicontract_relations.html  acicontractfilter.html  acicontractfilter_entries.html  acicontractfilterentry.html  acicontractrelation.html  acicontractsubject.html  acicontractsubjectfilter.html  aciendpointgroup.html  aciendpointgroup_contractrelations.html  aciendpointsecuritygroup.html  aciesgendpointgroupselector.html  aciesgendpointselector.html  aciexternalendpointgroup.html  aciexternalsubnet.html  acifabric.html  acil3out.html  acinode.html  acipod.html  acirouteddomain.html  acitenant.html  acitenant_appprofile.html  acitenant_appprofiles.html  acitenant_bds.html  acitenant_contracts.html  acitenant_endpointgroups.html  acitenant_vrfs.html  aciusegendpointgroup.html  aciusegnetworkattribute.html  acivrf.html  acivrf_bridgedomains.html
netbox_aci_plugin/tests/: __init__.py  query_counts.json  test_api.py  test_forms.py  test_models.py  test_object_actions.py  test_plugin.py
netbox_aci_plugin/tests/api/: test_app.py  test_tenant_app_profiles.py  test_tenant_contract_filters.py  test_tenant_contracts.py  test_tenant_networks.py  test_tenants.py
netbox_aci_plugin/tests/forms/: base.py  test_conventions.py  test_tenant_app_profiles.py  test_tenant_contract_filters.py  test_tenant_contracts.py  test_tenant_networks.py  test_tenants.py
netbox_aci_plugin/tests/graphql/: base.py  test_filters.py  test_pagination.py
netbox_aci_plugin/tests/models/: base.py  test_base.py  (+6 more)
netbox_aci_plugin/views/: __init__.py  tenant_app_profiles.py  tenant_contract_filters.py  tenant_contracts.py  tenant_networks.py  tenants.py
search/: search_index.json
security/: index.html
tests/: test_netbox_aci_plugin.py
(+151 files in other folders)
