# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-aci-plugin"
version = "0.3.1"
requires-python = ">=3.12.0"
authors = [
    {name = "Martin Hauser", email = "git@pheus.dev"},
]
maintainers = [
    {name = "Martin Hauser", email = "git@pheus.dev"},
]
description = "NetBox plugin for Cisco ACI"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["netbox", "netbox-plugin", "cisco", "aci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "zensical==0.0.43",
]
test = [
    "check-manifest==0.51",
    "coverage[toml]==7.6.10",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "ruff==0.15.15",
    "tblib==3.0.0",
    "yamllint==1.38.0",
]

[project.urls]
Homepage = "https://github.com/pheus/netbox-aci-plugin"
Documentation = "https://pheus.github.io/netbox-aci-plugin/"
Source = "https://github.com/pheus/netbox-aci-plugin"
Issues = "https://github.com/pheus/netbox-aci-plugin/issues"
Changelog = "https://github.com/pheus/netbox-aci-plugin/releases"

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".markdownlint.yaml",
    ".pre-commit-config.yaml",
    ".pypirc",
    "requirements_dev.txt",
    "ruff.toml",
]

[tool.coverage.run]
source = ["netbox_aci_plugin"]
omit = [
    "*/netbox_aci_plugin/tests/*",
    "*/netbox_aci_plugin/migrations/*",
]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_aci_plugin*"]

[tool.setuptools.package-data]
netbox_aci_plugin = [
    "templates/**",
    "static/**",
    "locale/**/*.mo"
]
